--- a/ProjectLeveran/Views/Home/Services.cshtml
+++ b/ProjectLeveran/Views/Home/Services.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewBag.Message</h2>
 <h3></h3>
 
-<p>To schedule a service, please contact us through call or whatsapp.</p>
+<p>To schedule a service, please contact us through call/whatsapp.</p>
 <table>
     <tr>
         <td><img src="~/Resources/Images/icon_phone_small.png" title="Call\Whatsapp" /></td>
